# kemuri-plugins

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
common/kemuri_core/: CMakeLists.txt
common/kemuri_core/include/kemuri_core/: ChordDetector.h  Generators.h  GrooveEngine.h  InteractionScorer.h  KeyContext.h  KeyDetector.h  LoopDetector.h  MarkovSelector.h  MidiAnalyzer.h  MusicTheory.h  Pattern.h  PatternBank.h  PatternLibrary.h  PhrasePlanner.h  PitchToken.h  Rng.h  Types.h  VariationEngine.h  Version.h
common/kemuri_core/src/: PatternLibrary.cpp
common/kemuri_ui/: CMakeLists.txt
common/kemuri_ui/include/kemuri_ui/: KemuriLookAndFeel.h
docs/: PORTING.md  patterns.sample.json
docs/reference/: kemuri_generator.js
plugins/KemuriBass/: CMakeLists.txt
plugins/KemuriBass/Source/: MidiSequence.h  PatternsJson.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SmfExport.h
plugins/KemuriStream/: AGENTS.md  CMakeLists.txt
plugins/KemuriStream/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/KemuriStream/Source/dsp/: Biquad.h  GatedLoudness.h  KWeighting.h  TruePeak.h
plugins/KemuriStream/docs/reference/: codec_filter.js
plugins/KemuriStream/tools/: gen_reference.py
tests/: CMakeLists.txt  CoreTests.cpp  PatternsTests.cpp  SmfTests.cpp  StreamTests.cpp
tests/reference/: chord_detect.json  clamp_snap.json  interaction.json  key_context.json  key_detect.json  loop_detect.json  phrase_flags.json  pitch_tokens.json  stream_measurement.json
tools/learning/: README.md  audio_to_midi.py  bass_separator.py  learn_patterns.py  pattern_extractor.py  patterns_json_writer.py  requirements.txt
tools/reference/: gen_reference.js
